--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ipl-wallpaper",
-  "version": "0.1.6",
+  "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "bin": "./index.js",
@@ -10,6 +10,7 @@
     "url": "https://github.com/wallpaper-cli/ipl/issues"
   },
   "scripts": {
+    "build": "webpack --config webpack.config.cjs",
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node main.js"
   },
@@ -23,8 +24,13 @@
   "author": "anmol5varma",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.6.8",
     "jimp": "^0.16.1",
-    "wallpaper": "^4.2.0",
-    "x-ray": "^2.3.4"
+    "wallpaper": "^4.2.0"
+  },
+  "devDependencies": {
+    "terser-webpack-plugin": "^5.3.9",
+    "webpack": "^5.88.2",
+    "webpack-cli": "^5.1.4"
   }
 }
