--- a/package.json
+++ b/package.json
@@ -2,10 +2,8 @@
   "name": "ipl-wallpaper",
   "version": "1.0.0",
   "description": "",
-  "main": "./dist/index.js",
-  "bin": {
-    "good-ipo": "./dist/bundle.min.cjs"
-  },
+  "main": "index.js",
+  "bin": "./index.js",
   "homepage": "https://github.com/wallpaper-cli/ipl",
   "repository": "git@github.com:wallpaper-cli/ipl.git",
   "bugs": {
@@ -27,10 +25,11 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^1.6.8",
-    "jimp": "^0.16.1",
+    "jimp": "^0.22.12",
     "wallpaper": "^4.2.0"
   },
   "devDependencies": {
+    "copy-webpack-plugin": "^12.0.2",
     "terser-webpack-plugin": "^5.3.9",
     "webpack": "^5.88.2",
     "webpack-cli": "^5.1.4"
